# inisg

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: cmake-multi-platform.yml
src/: actions.hpp  documentation.hpp  help.hpp  ini.cpp  ini.h  main.cpp  utils.hpp
